Fix a layout bug

--- a/smartstudy/static/less/home.less
+++ b/smartstudy/static/less/home.less
@@ -38,17 +38,17 @@
     .container > header > p  { font-size: 150%; }
 }
 
-#contents {
-    margin-top: 60px;
-}
-
 .inner-column () {
     .clearfix;
     max-width: 960px;
     margin: 0 auto;
 }
 
-.container > section {
+#contents {
+    margin-top: 60px;
+}
+
+#contents > section {
     width: 100%;
     background-color: #f3f3f8;
     padding: 60px 0;
